envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                - name: envoy.filters.http.local_ratelimit
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: http_local_rate_limiter
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                    - match: { prefix: "/" }
                      route: { cluster: service_go }
                      typed_per_filter_config:
                        envoy.filters.http.local_ratelimit:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                          stat_prefix: http_local_rate_limiter
                          token_bucket:
                            max_tokens: 1
                            tokens_per_fill: 1
                            fill_interval: 1s
                          filter_enabled:
                            runtime_key: local_rate_limit_enabled
                            default_value:
                              numerator: 100
                              denominator: HUNDRED
                          filter_enforced:
                            runtime_key: local_rate_limit_enforced
                            default_value:
                              numerator: 100
                              denominator: HUNDRED
                          response_headers_to_add:
                            - append_action: OVERWRITE_IF_EXISTS_OR_ADD
                              header:
                                key: x-local-rate-limit
                                value: 'true'
  clusters:
  - name: service_go
    type: STRICT_DNS
    load_assignment:
      cluster_name: service_go
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api
                port_value: 8081
